# FML_2025_Assignment_1

./: .gitignore  Multilayer_Perceptron.ipynb  data_loaders.py  model.py  requirements.txt  results.json  utils.py
MLP/: FlowerClient.py  Multilayer_Perceptron.ipynb  model_architecture  partitioners.py  requirements.txt
xgboost/: README.md  Report_Ecker.ipynb  baseline_model.ipynb  baseline_xgboost_model.pkl  global_model.json  hyperparameter_tuning.ipynb  pyproject.toml  requirement_annina.txt
xgboost/FL_XGBoost/: __init__.py  client_app.py  global_model.py  server_app.py  task.py  utils.py
